--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </main> 
         <footer>
             <div><p style="color: black;">Código: Ramses Martinez  -  Diseño: Alura Latam Team.  </p></div>
-            <div><a href="https://github.com/RamsesMartz/encriptador_alura"><img class="enlace" style="width: 20px;" src="Images/LogoGithub.png" alt="github-mark"></a></div>
+            <div><a href="https://github.com/RamsesMartz"><img class="enlace" style="width: 20px;" src="Images/LogoGithub.png" alt="github-mark"></a></div>
         </footer>
         <script src="app.js"></script>
     </body>
